优化日志配置，支持从.env文件读取LOG_LEVEL设置

--- a/.env.example
+++ b/.env.example
@@ -39,3 +39,15 @@ ENCRYPTION_KEY=
 # Telegram 代理认证配置（可选，用于带认证的代理）
 # TELEGRAM_PROXY_USERNAME=your_proxy_username
 # TELEGRAM_PROXY_PASSWORD=your_proxy_password
+
+# 日志配置（可选）
+# LOG_LEVEL - 控制日志输出的详细程度，默认为INFO
+# 可选值（从最详细到最简略）：
+#   DEBUG    - 最详细的日志信息，用于开发和故障排除
+#   INFO     - 一般信息性消息，跟踪应用程序的正常运行状态（默认）
+#   WARNING  - 警告信息，表示可能有问题但不会影响程序继续运行
+#   ERROR    - 错误信息，表示发生了错误但程序仍可继续运行
+#   CRITICAL - 严重错误信息，表示发生了严重影响程序运行的错误
+# 示例：设置为WARNING级别将只显示警告和错误信息
+# LOG_LEVEL=INFO
+# LOG_FILE=bot.log
