支持并发配置：新增MIN_CONCURRENCY与MAX_CONCURRENCY；.env.example加入示例；自适应仅在有任务时上调

--- a/.env.example
+++ b/.env.example
@@ -42,6 +42,7 @@ ENCRYPTION_KEY=
 
 # 日志配置（可选）
 # LOG_LEVEL - 控制日志输出的详细程度，默认为INFO
+# LOG_FILE  - 如果设置，将日志写入指定文件（默认由程序生成每日序号文件）
 # 可选值（从最详细到最简略）：
 #   DEBUG    - 最详细的日志信息，用于开发和故障排除
 #   INFO     - 一般信息性消息，跟踪应用程序的正常运行状态（默认）
@@ -51,3 +52,12 @@ ENCRYPTION_KEY=
 # 示例：设置为WARNING级别将只显示警告和错误信息
 # LOG_LEVEL=INFO
 # LOG_FILE=bot.log
+
+# 并发配置（可选）
+# MAX_WORKERS      - 初始工作线程数（默认2）
+# MIN_CONCURRENCY  - 自适应并发下限（默认1）
+# MAX_CONCURRENCY  - 自适应并发上限（默认10）
+# 示例：
+# MAX_WORKERS=2
+# MIN_CONCURRENCY=1
+# MAX_CONCURRENCY=10
