集成HTTP健康检查端点
- 在main/__main__.py中添加HTTP健康检查服务器
- 支持/和/health端点，用于容器健康检查
- 更新Dockerfile：添加curl工具，暴露8080端口，使用HTTP健康检查
- 更新docker-compose.yml暴露健康检查端口
- 健康检查服务器在后台线程运行，不影响Telegram机器人功能

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,10 @@ services:
       SESSION: ${SESSION:-}
       FORCESUB: ${FORCESUB:-}
     
+    # 端口映射 - 用于健康检查
+    ports:
+      - "8080:8080"
+    
     # 日志配置
     logging:
       driver: "json-file"
