fix: 修复GitHub Actions Docker构建失败问题
- 优化Dockerfile，添加更多系统依赖和镜像源
- 更新requirements.txt，指定明确的依赖版本
- 添加文件缓存和性能监控工具
- 重构下载服务，拆分复杂函数

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-telethon==1.24.0
-ethon
-cryptg
-tgcrypto
-pyrogram
-python-decouple
-pymongo
-dnspython
-cryptography
-nest_asyncio
+telethon==1.28.5
+ethon==0.1.4
+cryptg==0.4.0
+tgcrypto==1.2.5
+pyrogram==2.0.106
+python-decouple==3.8
+pymongo==4.5.0
+dnspython==2.4.2
+cryptography==41.0.7
+nest-asyncio==1.5.8
