--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
 version: "3.8"
 
 services:
-  tg-bot:
+  tg-content-bot:
     build: .
     container_name: tg-content-bot
     restart: unless-stopped
+    
+    # 环境变量配置
     environment:
       # 必需配置
       API_ID: ${API_ID}
@@ -16,10 +18,29 @@ services:
       # 可选配置
       SESSION: ${SESSION:-}
       FORCESUB: ${FORCESUB:-}
+      HEALTH_CHECK_PORT: ${HEALTH_CHECK_PORT:-8080}
     
     # 端口映射 - 用于健康检查
     ports:
-      - "8080:8080"
+      - "${HEALTH_CHECK_PORT:-8080}:8080"
+    
+    # 资源限制
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+          cpus: '1.0'
+        reservations:
+          memory: 256M
+          cpus: '0.5'
+    
+    # 健康检查
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 60s
     
     # 日志配置
     logging:
@@ -27,3 +48,8 @@ services:
       options:
         max-size: "10m"
         max-file: "3"
+
+# 网络配置
+networks:
+  default:
+    name: tg-bot-network
