精简pull分支，优化Northflank平台部署
- 删除apply.build平台专用文件: app.json, build.json, apply-build.md, deploy.sh
- 添加Northflank兼容的主入口文件(__main__.py)
- 修复启动脚本(start.sh)的Python模块导入问题
- 优化Nixpacks配置(nixpacks.toml)
- 项目更专注于Northflank平台容器化部署

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -27,10 +27,10 @@ cmds = [
 
 [start]
 # 启动命令
-cmd = "python -m main"
+cmd = "sh start.sh"
 
 # 端口映射
 [[processes]]
 name = "web"
-cmd = "python -m main"
+cmd = "sh start.sh"
 ports = [8080]
