--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -27,10 +27,10 @@ cmds = [
 
 [start]
 # 启动命令
-cmd = "sh start.sh"
+cmd = "python3 __main__.py"
 
 # 端口映射
 [[processes]]
 name = "web"
-cmd = "sh start.sh"
+cmd = "python3 __main__.py"
 ports = [8080]
