--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -27,10 +27,10 @@ cmds = [
 
 [start]
 # 启动命令
-cmd = "python3 __main__.py"
+cmd = "python3 -m main"
 
 # 端口映射
 [[processes]]
 name = "web"
-cmd = "python3 __main__.py"
+cmd = "python3 -m main"
 ports = [8080]
