optimize: 精简pull分支，优化部署配置和文档
- 删除不必要的构建文件(nixpacks.toml, setup.py, requirements.txt)
- 优化Dockerfile和docker-compose.yml配置
- 修复启动脚本，使用正确的应用入口
- 完善README.md文档，提供完整的部署指南
- 精简项目结构，仅保留7个核心部署文件

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   tg-content-bot:
-    build: .
+    image: ghcr.io/liwoyuandiane/tg-content-bot-pro:main
     container_name: tg-content-bot
     restart: unless-stopped
     
