--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-telethon==1.28.5
-ethon==0.1.4
+telethon==1.34.0
+ethon==0.2.0
 cryptg==0.4.0
 tgcrypto==1.2.5
 pyrogram==2.0.106
 python-decouple==3.8
-pymongo==4.5.0
-dnspython==2.4.2
-cryptography==41.0.7
-nest-asyncio==1.5.8
+pymongo==4.6.0
+dnspython==2.5.0
+cryptography==42.0.5
+nest-asyncio==1.6.0
+httpx==0.27.0  # 新增：用于更健壮的网络请求
+python-multipart==0.0.9  # 新增：用于处理文件上传
+psutil==5.9.8  # 新增：用于系统资源监控
