--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
-# 环境变量配置示例
+# TG-Content-Bot-Pro 配置文件
 # 复制此文件为 .env 并填入您的真实配置
+
+# ===================================
+# 必需配置项
+# ===================================
 
 # Telegram API 凭证（从 my.telegram.org 获取）
 API_ID=your_api_id_here
@@ -8,56 +12,101 @@ API_HASH=your_api_hash_here
 # Bot Token（从 @BotFather 获取）
 BOT_TOKEN=your_bot_token_here
 
-# Pyrogram 会话字符串（可选，运行 get_session.py 获取）
-# 如果配置了 MongoDB，可以通过 /addsession 命令在机器人中添加
-SESSION=
-
 # 机器人所有者的 Telegram 用户 ID（从 @userinfobot 获取）
+# 支持多个ID，使用逗号分隔，例如：1234567890,9876543210
 AUTH=your_user_id_here
 
+# MongoDB 连接字符串（必需，用于存储会话和流量数据）
+# 示例：
+#   本地MongoDB: mongodb://username:password@localhost:27017/database
+#   MongoDB Atlas: mongodb+srv://username:password@cluster.mongodb.net/database
+MONGO_DB=your_mongodb_connection_string
+
+# ===================================
+# 可选配置项
+# ===================================
+
+# Pyrogram 会话字符串（可选）
+# 用于访问受限频道，可通过 /generatesession 命令在机器人中生成
+SESSION=
+
 # 强制订阅频道用户名（可选，不带 @ 符号）
+# 示例：mychannel
 FORCESUB=
 
-# MongoDB 连接字符串（可选，用于存储 SESSION 和流量数据）
-# 示例：mongodb://username:password@host:port/database
-# 或 MongoDB Atlas: mongodb+srv://username:password@cluster.mongodb.net/database
-MONGO_DB=
-
-# 加密密钥（用于加密存储 SESSION 字符串）
+# 加密密钥（用于加密存储 SESSION 字符串，可选）
 # 运行时会自动生成，建议复制到此处以保持密钥一致
+# 建议长度至少16位，32位最佳
 ENCRYPTION_KEY=
 
-# Telegram 代理配置（可选，用于解决网络连接问题）
-# 详情请参考 SOCKS5_PROXY_SOLUTION.md
-# TELEGRAM_PROXY_SCHEME=socks5
-# TELEGRAM_PROXY_HOST=your-proxy-server.com
-# TELEGRAM_PROXY_PORT=1080
+# ===================================
+# 环境配置
+# ===================================
 
-# 其他代理配置（可选，用于HTTP代理）
-# OTHER_PROXY_URL=your-http-proxy-server.com
+# 运行环境（可选，默认：production）
+# 可选值：development, testing, production
+ENVIRONMENT=production
 
-# Telegram 代理认证配置（可选，用于带认证的代理）
-# TELEGRAM_PROXY_USERNAME=your_proxy_username
-# TELEGRAM_PROXY_PASSWORD=your_proxy_password
+# 调试模式（可选，默认：false）
+# 设置为 true 以启用详细日志和调试功能
+DEBUG=false
 
-# 日志配置（可选）
-# LOG_LEVEL - 控制日志输出的详细程度，默认为INFO
-# LOG_FILE  - 如果设置，将日志写入指定文件（默认由程序生成每日序号文件）
-# 可选值（从最详细到最简略）：
-#   DEBUG    - 最详细的日志信息，用于开发和故障排除
-#   INFO     - 一般信息性消息，跟踪应用程序的正常运行状态（默认）
-#   WARNING  - 警告信息，表示可能有问题但不会影响程序继续运行
-#   ERROR    - 错误信息，表示发生了错误但程序仍可继续运行
-#   CRITICAL - 严重错误信息，表示发生了严重影响程序运行的错误
-# 示例：设置为WARNING级别将只显示警告和错误信息
-# LOG_LEVEL=INFO
-# LOG_FILE=bot.log
+# 日志级别（可选，默认：INFO）
+# 可选值：DEBUG, INFO, WARNING, ERROR, CRITICAL
+LOG_LEVEL=INFO
 
-# 并发配置（可选）
-# MAX_WORKERS      - 初始工作线程数（默认2）
-# MIN_CONCURRENCY  - 自适应并发下限（默认1）
-# MAX_CONCURRENCY  - 自适应并发上限（默认10）
-# 示例：
-# MAX_WORKERS=2
-# MIN_CONCURRENCY=1
-# MAX_CONCURRENCY=10
+# ===================================
+# 性能配置
+# ===================================
+
+# 工作线程数（可选，默认：3，范围：1-20）
+MAX_WORKERS=3
+
+# 最小并发数（可选，默认：1）
+MIN_CONCURRENCY=1
+
+# 最大并发数（可选，默认：15）
+MAX_CONCURRENCY=15
+
+# 分块大小（可选，默认：524288字节（512KB），范围：1-52428800（50MB））
+CHUNK_SIZE=524288
+
+# 最大重试次数（可选，默认：3，范围：1-10）
+MAX_RETRIES=3
+
+# 重试延迟（可选，默认：1.0秒）
+RETRY_DELAY=1.0
+
+# 连接超时（可选，默认：30秒）
+CONNECT_TIMEOUT=30
+
+# 读取超时（可选，默认：60秒）
+READ_TIMEOUT=60
+
+# 健康检查端口（可选，默认：8080，范围：1024-65535）
+HEALTH_CHECK_PORT=8080
+
+# ===================================
+# 流量限制配置
+# ===================================
+
+# 默认每日流量限制（可选，默认：1073741824字节（1GB））
+DEFAULT_DAILY_LIMIT=1073741824
+
+# 默认每月流量限制（可选，默认：10737418240字节（10GB））
+DEFAULT_MONTHLY_LIMIT=10737418240
+
+# 默认单文件限制（可选，默认：104857600字节（100MB））
+DEFAULT_PER_FILE_LIMIT=104857600
+
+# ===================================
+# 下载配置
+# ===================================
+
+# YouTube Cookie（可选，用于下载受限YouTube视频）
+# 格式：Netscape格式的Cookie字符串
+YT_COOKIES=
+
+# Instagram Cookie（可选，用于下载受限Instagram视频）
+# 格式：Netscape格式的Cookie字符串
+INSTA_COOKIES=
