--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,5 @@ nest-asyncio==1.6.0
 httpx==0.27.0  # 新增：用于更健壮的网络请求
 python-multipart==0.0.9  # 新增：用于处理文件上传
 psutil==5.9.8  # 新增：用于系统资源监控
+yt-dlp==2025.11.16  # 新增：用于多平台视频下载支持
+mutagen==1.47.0  # 新增：用于音频元数据编辑
