--- a/.env.example
+++ b/.env.example
@@ -6,20 +6,24 @@
 # ===================================
 
 # Telegram API 凭证（从 my.telegram.org 获取）
+# 用于创建 Telegram 应用的唯一标识符
 API_ID=your_api_id_here
 API_HASH=your_api_hash_here
 
 # Bot Token（从 @BotFather 获取）
+# Telegram 机器人的访问令牌
 BOT_TOKEN=your_bot_token_here
 
 # 机器人所有者的 Telegram 用户 ID（从 @userinfobot 获取）
 # 支持多个ID，使用逗号分隔，例如：1234567890,9876543210
+# 这些用户将拥有机器人的完全控制权限
 AUTH=your_user_id_here
 
 # MongoDB 连接字符串（必需，用于存储会话和流量数据）
 # 示例：
 #   本地MongoDB: mongodb://username:password@localhost:27017/database
 #   MongoDB Atlas: mongodb+srv://username:password@cluster.mongodb.net/database
+# 用于存储用户会话、消息历史、流量统计等数据
 MONGO_DB=your_mongodb_connection_string
 
 # ===================================
@@ -28,15 +32,18 @@ MONGO_DB=your_mongodb_connection_string
 
 # Pyrogram 会话字符串（可选）
 # 用于访问受限频道，可通过 /generatesession 命令在机器人中生成
+# 这是一个用户账户的会话，允许机器人访问私有内容
 SESSION=
 
 # 强制订阅频道用户名（可选，不带 @ 符号）
+# 用户必须关注此频道才能使用机器人功能
 # 示例：mychannel
 FORCESUB=
 
 # 加密密钥（用于加密存储 SESSION 字符串，可选）
 # 运行时会自动生成，建议复制到此处以保持密钥一致
-# 建议长度至少16位，32位最佳
+# 密钥长度必须在3-128个字符之间
+# 用于加密存储用户的会话信息，提高安全性
 ENCRYPTION_KEY=
 
 # ===================================
@@ -44,15 +51,23 @@ ENCRYPTION_KEY=
 # ===================================
 
 # 运行环境（可选，默认：production）
-# 可选值：development, testing, production
+# 可选值：development（开发）, testing（测试）, production（生产）
+# 不同环境会影响日志格式和详细程度
 ENVIRONMENT=production
 
 # 调试模式（可选，默认：false）
 # 设置为 true 以启用详细日志和调试功能
+# 开启后会强制使用 DEBUG 级别日志，输出最详细的调试信息
 DEBUG=false
 
 # 日志级别（可选，默认：INFO）
 # 可选值：DEBUG, INFO, WARNING, ERROR, CRITICAL
+# 控制日志输出的详细程度，从详细到简略排序：
+# DEBUG   : 最详细，包含调试信息和所有细节
+# INFO    : 一般信息，程序正常运行的状态
+# WARNING : 警告信息，程序仍可正常运行但需要注意
+# ERROR   : 错误信息，某些功能出现故障
+# CRITICAL: 严重错误，程序可能无法继续运行
 LOG_LEVEL=INFO
 
 # ===================================
@@ -60,53 +75,53 @@ LOG_LEVEL=INFO
 # ===================================
 
 # 工作线程数（可选，默认：3，范围：1-20）
+# 控制处理消息的工作线程数量
 MAX_WORKERS=3
 
 # 最小并发数（可选，默认：1）
+# 处理消息时的最小并发连接数
 MIN_CONCURRENCY=1
 
 # 最大并发数（可选，默认：15）
+# 处理消息时的最大并发连接数
 MAX_CONCURRENCY=15
 
 # 分块大小（可选，默认：524288字节（512KB），范围：1-52428800（50MB））
+# 文件传输时的分块大小，影响内存使用和传输效率
 CHUNK_SIZE=524288
 
 # 最大重试次数（可选，默认：3，范围：1-10）
+# 操作失败时的最大重试次数
 MAX_RETRIES=3
 
 # 重试延迟（可选，默认：1.0秒）
+# 每次重试之间的等待时间（秒）
 RETRY_DELAY=1.0
 
 # 连接超时（可选，默认：30秒）
+# 建立连接的超时时间（秒）
 CONNECT_TIMEOUT=30
 
 # 读取超时（可选，默认：60秒）
+# 读取数据的超时时间（秒）
 READ_TIMEOUT=60
 
-# 健康检查端口（可选，默认：8080，范围：1024-65535）
-HEALTH_CHECK_PORT=8080
+# 健康检查端口（可选，默认：8089，范围：1024-65535）
+# HTTP健康检查服务监听的端口
+HEALTH_CHECK_PORT=8089
 
 # ===================================
 # 流量限制配置
 # ===================================
 
 # 默认每日流量限制（可选，默认：1073741824字节（1GB））
+# 每个用户每天可以转发的数据总量限制
 DEFAULT_DAILY_LIMIT=1073741824
 
 # 默认每月流量限制（可选，默认：10737418240字节（10GB））
+# 每个用户每月可以转发的数据总量限制
 DEFAULT_MONTHLY_LIMIT=10737418240
 
 # 默认单文件限制（可选，默认：104857600字节（100MB））
+# 单个文件的大小限制
 DEFAULT_PER_FILE_LIMIT=104857600
-
-# ===================================
-# 下载配置
-# ===================================
-
-# YouTube Cookie（可选，用于下载受限YouTube视频）
-# 格式：Netscape格式的Cookie字符串
-YT_COOKIES=
-
-# Instagram Cookie（可选，用于下载受限Instagram视频）
-# 格式：Netscape格式的Cookie字符串
-INSTA_COOKIES=
